# python2023intro

Lecture01/: lecture01.ipynb
Lecture02/: lecture02.ipynb
Lecture03/: lecture03.ipynb
Lecture04/: lecture04.ipynb
Lecture05/: lecture05.ipynb
Lecture06/: lecture06.ipynb  performance.ipynb  test.py
Lecture07/: lecture07.ipynb  my_test.py
Lecture08/: lecture08.ipynb
Lecture09/: lecture09.ipynb
Lecture10/: lecture10.ipynb  mp.py  multitasks.ipynb
stats/: short1.ipynb  short2.ipynb  short3.ipynb
tutorial/: reg_tut.ipynb
tutorial/binds/: library.ipynb
tutorial/binds/ctypeslib/: CMakeLists.txt  test.ipynb
tutorial/binds/ctypeslib/include/: utils.hpp
tutorial/binds/ctypeslib/src/: utils.cpp
tutorial/binds/native/: CMakeLists.txt  test.ipynb
tutorial/binds/native/include/: mymod.h  utils.hpp
tutorial/binds/native/src/: mymod.c  utils.cpp
tutorial/binds/pybind/: CMakeLists.txt  test.ipynb
tutorial/binds/pybind/src/: mymod.cpp
tutorial/pyweb/: web.ipynb
